--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,33 +71,19 @@
         <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
           Możesz sprawdzić czym się zajmują.</p>
 
-        <ul class="help--slides-items">
+        <ul class="help--slides-items" th:each="institution, stat: ${institutions}">
           <li>
             <div class="col">
-              <div class="title">Fundacja "Dbam o Zdrowie"</div>
-              <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
+              <div class="title" th:if="*{stat.odd}" th:text="${institution.name}"></div>
+              <div class="subtitle" th:if="*{stat.odd}" th:text="${institution.description}"></div>
             </div>
-
             <div class="col">
-              <div class="title">Fundacja "A kogo"</div>
-              <div class="subtitle">Cel i misja: Pomoc wybudzaniu dzieci ze śpiączki.</div>
+
+              <div class="title" th:if="*{stat.even}" th:text="${institution.name}"></div>
+              <div class="subtitle" th:if="*{stat.even}" th:text="${institution.description}"></div>
             </div>
           </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Dla dzieci"</div>
-              <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
-            </div>
-            <div class="col">
-              <div class="title">Fundacja “Bez domu”</div>
-              <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>
-            </div>
-
-          </li>
-
         </ul>
-
 
       </div>
 
