--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,63 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header class="header--form-page">
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
+<head th:replace="fragments :: head"></head>
 
-        <ul>
-          <li><a href="index.html" class="btn btn--without-border active">Start</a></li>
-          <li><a href="index.html#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="index.html#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="index.html#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="index.html#contact" class="btn btn--without-border">Kontakt</a></li>
-        </ul>
-      </nav>
 
-      <div class="slogan container container--90">
-        <div class="slogan--item">
-          <h1>
-            Oddaj rzeczy, których już nie chcesz<br />
-            <span class="uppercase">potrzebującym</span>
-          </h1>
+<body>
 
-          <div class="slogan--steps">
-            <div class="slogan--steps-title">Wystarczą 4 proste kroki:</div>
-            <ul class="slogan--steps-boxes">
-              <li>
-                <div><em>1</em><span>Wybierz rzeczy</span></div>
-              </li>
-              <li>
-                <div><em>2</em><span>Spakuj je w worki</span></div>
-              </li>
-              <li>
-                <div><em>3</em><span>Wybierz fundację</span></div>
-              </li>
-              <li>
-                <div><em>4</em><span>Zamów kuriera</span></div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </header>
+<header th:replace="fragments :: header"></header>
 
     <section class="form--steps">
       <div class="form--steps-instructions">
@@ -82,20 +31,32 @@
       <div class="form--steps-container">
         <div class="form--steps-counter">Krok <span>1</span>/4</div>
 
-        <form action="form-confirmation.html" th:object="${donation}" method="post">
+        <form action="form-confirmation.html" th:object="${donation}" th:action="@{/donation}" method="post">
           <!-- STEP 1: class .active is switching steps -->
           <div data-step="1" class="active">
             <h3>Zaznacz co chcesz oddać:</h3>
 
-            <div class="form-group form-group--checkbox" th:each="category: ${categories}">
-              <label>
-                <input type="checkbox" name="donationCategories" th:value="*{donationCategorys}" />
-                <span class="checkbox"></span>
-                <span class="description" th:text="${category.name}"></span
-                >
-              </label>
-            </div>
+<!--            <div class="form-group form-group&#45;&#45;checkbox" th:each="category, stat: ${categories}">-->
 
+<!--              <label>-->
+<!--                <input type="checkbox" name="donationCategries" th:value="category.id" />-->
+<!--                <span class="checkbox"></span>-->
+<!--                <span class="description" th:text="${category.name}"></span>-->
+<!--              </label>-->
+<!--            </div>-->
+        <div>
+
+              <div th:each="category, stat: ${categories}">
+                <div>
+                <label th:for="${#ids.next('categories')}">
+                <input type="checkbox" id="categories" th:field="*{donationCategories}" th:value="${category.id}"/>
+                <span class="checkbox"></span>
+                <span class="description" th:text="${category.name}"></span>
+                </label>
+                </div>
+              </div>
+
+        </div>
             <div class="form-group form-group--buttons">
               <button type="button" class="btn next-step">Dalej</button>
             </div>
@@ -108,7 +69,7 @@
             <div class="form-group form-group--inline">
               <label>
                 Liczba 60l worków:
-                <input type="number" name="quantity" th:value="*{quantity}" step="1" min="1" />
+                <input type="number" name="quantity" id="quantity" th:value="*{quantity}" step="1" min="1" />
               </label>
             </div>
 
@@ -126,13 +87,13 @@
 
             <div class="form-group form-group--checkbox" th:each="institution: ${institutions}">
               <label>
-                <input type="radio" name="institution" th:value="*{institution}" />
-                <span class="checkbox radio"></span>
+                <input type="radio" name="institution"  th:value="${institution.id}"/>
+                <span class="checkbox radio"  ></span>
                 <span class="description">
-                  <div class="title" th:text="${institution.name}"></div>
-                  <div class="subtitle" th:text="${institution.description}">
 
-                  </div>
+                  <div class="title" id="institution"  th:text="${institution.name}"></div>
+                  <div class="subtitle" th:text="${institution.description}"></div>
+
                 </span>
               </label>
             </div>
@@ -151,22 +112,22 @@
               <div class="form-section--column">
                 <h4>Adres odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Ulica <input type="text" name="street" th:value="*{street}"/> </label>
+                  <label> Ulica <input type="text" id="street" name="street" th:value="*{street}"/> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Miasto <input type="text" name="city" th:value="*{city}" /> </label>
+                  <label> Miasto <input type="text" id="city" name="city" th:value="*{city}" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Kod pocztowy <input type="text" name="zipCode" th:value="*{zipCode}"/>
+                    Kod pocztowy <input type="text" id="zipCode" name="zipCode" th:value="*{zipCode}"/>
                   </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
-                    Numer telefonu <input type="phone" name="phone" />
+                    Numer telefonu <input type="text" id="phone" name="phone" th:value="*{phone}" />
                   </label>
                 </div>
               </div>
@@ -174,17 +135,17 @@
               <div class="form-section--column">
                 <h4>Termin odbioru</h4>
                 <div class="form-group form-group--inline">
-                  <label> Data <input type="date" name="pickUpDate" th:value="*{pickUpDate}"/> </label>
+                  <label> Data <input type="date" id="pickUpDate" name="pickUpDate" th:value="*{pickUpDate}"/> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
-                  <label> Godzina <input type="time" name="pickUpTime" th:value="*{pickUpTime}" /> </label>
+                  <label> Godzina <input type="time" id="pickUpTime" name="pickUpTime" th:value="*{pickUpTime}" /> </label>
                 </div>
 
                 <div class="form-group form-group--inline">
                   <label>
                     Uwagi dla kuriera
-                    <textarea name="pickUpComment" rows="5" th:value="*{pickUpComment}"></textarea>
+                    <textarea id="pickUpComment" name="pickUpComment" rows="5" th:value="*{pickUpComment}"></textarea>
                   </label>
                 </div>
               </div>
@@ -205,7 +166,7 @@
                 <ul>
                   <li>
                     <span class="icon icon-bag"></span>
-                    <span class="summary--text" th:text="|${donation.quantity} worki *{donationCategorys}|"                      ></span
+                    <span class="summary--text" ></span
                     >
                   </li>
 
@@ -220,7 +181,7 @@
               <div class="form-section form-section--columns">
                 <div class="form-section--column">
                   <h4>Adres odbioru:</h4>
-                  <ul>
+                  <ul id="address">
                     <li>Prosta 51</li>
                     <li>Warszawa</li>
                     <li>99-098</li>
@@ -230,7 +191,7 @@
 
                 <div class="form-section--column">
                   <h4>Termin odbioru:</h4>
-                  <ul>
+                  <ul id="date">
                     <li>13/12/2018</li>
                     <li>15:40</li>
                     <li>Brak uwag</li>
@@ -248,42 +209,8 @@
       </div>
     </section>
 
-    <footer>
-      <div class="contact">
-        <h2>Skontaktuj się z nami</h2>
-        <h3>Formularz kontaktowy</h3>
-        <form class="form--contact">
-          <div class="form-group form-group--50">
-            <input type="text" name="name" placeholder="Imię" />
-          </div>
-          <div class="form-group form-group--50">
-            <input type="text" name="surname" placeholder="Nazwisko" />
-          </div>
+<footer th:replace="fragments :: footer"></footer>
 
-          <div class="form-group">
-            <textarea
-              name="message"
-              placeholder="Wiadomość"
-              rows="1"
-            ></textarea>
-          </div>
-
-          <button class="btn" type="submit">Wyślij</button>
-        </form>
-      </div>
-      <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2018</span>
-        <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-facebook.svg"
-          /></a>
-          <a href="#" class="btn btn--small"
-            ><img src="images/icon-instagram.svg"
-          /></a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="js/app.js"></script>
-  </body>
+<script th:replace="fragments :: script"></script>
+</body>
 </html>
