User Registration and Login

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<header th:replace="fragments :: header"></header>
+<header th:replace="fragments :: headerStart"></header>
 
     <section class="form--steps">
       <div class="form--steps-instructions">
