--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
@@ -27,9 +28,9 @@
 
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form th:action="@{/login}" method="post">
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+          <input type="text" name="username" placeholder="Email" />
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
@@ -37,7 +38,7 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
+          <a href="#" class="btn btn--without-border">Załóż konto</a>
           <button class="btn" type="submit">Zaloguj się</button> 
         </div>
       </form>
