Institution CRUD for Admin

--- a/src/main/resources/templates/form-confirmation.html
+++ b/src/main/resources/templates/form-confirmation.html
@@ -3,9 +3,8 @@
   <head th:insert="fragments :: head"> </head>
   <body>
 
-  <header th:insert="fragments :: headerDonation">
+     <header th:insert="fragments :: headerDonation"></header>
 
-    </header>
 
     <footer th:insert="fragments :: footer"></footer>
     <script th:insert="fragments :: script"></script>
