--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form th:action="@{/login}" method="post">
+      <form th:action="@{/login}" th:method="post">
         <div class="form-group">
           <input type="text" name="username" placeholder="Email" />
         </div>
