--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
   <body>
 
-  <header th:replace="fragments :: header"></header>
+  <header th:replace="fragments :: headerStart"></header>
 
     <section id="stats" class="stats">
       <div class="container container--85">
