--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -6,208 +6,206 @@
 
 <body>
 
-<header th:replace="fragments :: headerStart"></header>
+<header class="header--main-page">
+    <nav th:insert="fragments :: afterLogin"></nav>
+    <div th:insert="fragments :: sloganForm"></div>
+</header>
 
-    <section class="form--steps">
-      <div class="form--steps-instructions">
+<section class="form--steps">
+    <div class="form--steps-instructions">
         <div class="form--steps-container">
-          <h3>Ważne!</h3>
-          <p data-step="1" class="active">
-            Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
-            wiedzieć komu najlepiej je przekazać.
-          </p>
-          <p data-step="2">
-            Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
-            wiedzieć komu najlepiej je przekazać.
-          </p>
-          <p data-step="3">
-           Wybierz jedną, do
-            której trafi Twoja przesyłka.
-          </p>
-          <p data-step="4">Podaj adres oraz termin odbioru rzeczy.</p>
+            <h3>Ważne!</h3>
+            <p data-step="1" class="active">
+                Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
+                wiedzieć komu najlepiej je przekazać.
+            </p>
+            <p data-step="2">
+                Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
+                wiedzieć komu najlepiej je przekazać.
+            </p>
+            <p data-step="3">
+                Wybierz jedną, do
+                której trafi Twoja przesyłka.
+            </p>
+            <p data-step="4">Podaj adres oraz termin odbioru rzeczy.</p>
         </div>
-      </div>
+    </div>
 
-      <div class="form--steps-container">
+    <div class="form--steps-container">
         <div class="form--steps-counter">Krok <span>1</span>/4</div>
 
         <form action="form-confirmation.html" th:object="${donation}" th:action="@{/donation}" method="post">
-          <!-- STEP 1: class .active is switching steps -->
-          <div data-step="1" class="active">
-            <h3>Zaznacz co chcesz oddać:</h3>
+            <!-- STEP 1: class .active is switching steps -->
+            <div data-step="1" class="active">
+                <h3>Zaznacz co chcesz oddać:</h3>
 
-<!--            <div class="form-group form-group&#45;&#45;checkbox" th:each="category, stat: ${categories}">-->
-
-<!--              <label>-->
-<!--                <input type="checkbox" name="donationCategries" th:value="category.id" />-->
-<!--                <span class="checkbox"></span>-->
-<!--                <span class="description" th:text="${category.name}"></span>-->
-<!--              </label>-->
-<!--            </div>-->
-        <div>
-
-              <div th:each="category, stat: ${categories}">
                 <div>
-                <label th:for="${#ids.next('categories')}">
-                <input type="checkbox" id="categories" th:field="*{donationCategories}" th:value="${category.id}"/>
-                <span class="checkbox"></span>
-                <span class="description" th:text="${category.name}"></span>
-                </label>
+
+                    <div th:each="category, stat: ${categories}">
+                        <div>
+                            <label th:for="${#ids.next('categories')}">
+                                <input type="checkbox" id="categories" th:field="*{donationCategories}"
+                                       th:value="${category.id}"/>
+                                <span class="checkbox"></span>
+                                <span class="description" th:text="${category.name}"></span>
+                            </label>
+                        </div>
+                    </div>
+
                 </div>
-              </div>
-
-        </div>
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-          <!-- STEP 2 -->
-          <div data-step="2">
-            <h3>Podaj liczbę 60l worków, w które spakowałeś/aś rzeczy:</h3>
-
-            <div class="form-group form-group--inline">
-              <label>
-                Liczba 60l worków:
-                <input type="number" name="quantity" id="quantity" th:value="*{quantity}" step="1" min="1" />
-              </label>
+                <div class="form-group form-group--buttons">
+                    <button type="button" class="btn next-step">Dalej</button>
+                </div>
             </div>
 
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
+            <!-- STEP 2 -->
+            <div data-step="2">
+                <h3>Podaj liczbę 60l worków, w które spakowałeś/aś rzeczy:</h3>
+
+                <div class="form-group form-group--inline">
+                    <label>
+                        Liczba 60l worków:
+                        <input type="number" name="quantity" id="quantity" th:value="*{quantity}" step="1" min="1"/>
+                    </label>
+                </div>
+
+                <div class="form-group form-group--buttons">
+                    <button type="button" class="btn prev-step">Wstecz</button>
+                    <button type="button" class="btn next-step">Dalej</button>
+                </div>
             </div>
-          </div>
 
 
+            <!-- STEP 4 -->
+            <div data-step="3">
+                <h3>Wybierz organizacje, której chcesz pomóc:</h3>
 
-          <!-- STEP 4 -->
-          <div data-step="3">
-            <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+                <div class="form-group form-group--checkbox" th:each="institution: ${institutions}">
+                    <label>
+                        <input type="radio" name="institution" th:value="${institution.id}"/>
+                        <span class="checkbox radio"></span>
+                        <span class="description">
 
-            <div class="form-group form-group--checkbox" th:each="institution: ${institutions}">
-              <label>
-                <input type="radio" name="institution"  th:value="${institution.id}"/>
-                <span class="checkbox radio"  ></span>
-                <span class="description">
-
-                  <div class="title" id="institution"  th:text="${institution.name}"></div>
+                  <div class="title" id="institution" th:text="${institution.name}"></div>
                   <div class="subtitle" th:text="${institution.description}"></div>
 
                 </span>
-              </label>
+                    </label>
+                </div>
+
+                <div class="form-group form-group--buttons">
+                    <button type="button" class="btn prev-step">Wstecz</button>
+                    <button type="button" class="btn next-step">Dalej</button>
+                </div>
             </div>
 
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
+            <!-- STEP 5 -->
+            <div data-step="4">
+                <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
 
-          <!-- STEP 5 -->
-          <div data-step="4">
-            <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
+                <div class="form-section form-section--columns">
+                    <div class="form-section--column">
+                        <h4>Adres odbioru</h4>
+                        <div class="form-group form-group--inline">
+                            <label> Ulica <input type="text" id="street" name="street" th:value="*{street}"/> </label>
+                        </div>
 
-            <div class="form-section form-section--columns">
-              <div class="form-section--column">
-                <h4>Adres odbioru</h4>
-                <div class="form-group form-group--inline">
-                  <label> Ulica <input type="text" id="street" name="street" th:value="*{street}"/> </label>
+                        <div class="form-group form-group--inline">
+                            <label> Miasto <input type="text" id="city" name="city" th:value="*{city}"/> </label>
+                        </div>
+
+                        <div class="form-group form-group--inline">
+                            <label>
+                                Kod pocztowy <input type="text" id="zipCode" name="zipCode" th:value="*{zipCode}"/>
+                            </label>
+                        </div>
+
+                        <div class="form-group form-group--inline">
+                            <label>
+                                Numer telefonu <input type="text" id="phone" name="phone" th:value="*{phone}"/>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="form-section--column">
+                        <h4>Termin odbioru</h4>
+                        <div class="form-group form-group--inline">
+                            <label> Data <input type="date" id="pickUpDate" name="pickUpDate" th:value="*{pickUpDate}"/>
+                            </label>
+                        </div>
+
+                        <div class="form-group form-group--inline">
+                            <label> Godzina <input type="time" id="pickUpTime" name="pickUpTime"
+                                                   th:value="*{pickUpTime}"/> </label>
+                        </div>
+
+                        <div class="form-group form-group--inline">
+                            <label>
+                                Uwagi dla kuriera
+                                <textarea id="pickUpComment" name="pickUpComment" rows="5"
+                                          th:value="*{pickUpComment}"></textarea>
+                            </label>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="form-group form-group--inline">
-                  <label> Miasto <input type="text" id="city" name="city" th:value="*{city}" /> </label>
+                <div class="form-group form-group--buttons">
+                    <button type="button" class="btn prev-step">Wstecz</button>
+                    <button type="button" class="btn next-step">Dalej</button>
                 </div>
-
-                <div class="form-group form-group--inline">
-                  <label>
-                    Kod pocztowy <input type="text" id="zipCode" name="zipCode" th:value="*{zipCode}"/>
-                  </label>
-                </div>
-
-                <div class="form-group form-group--inline">
-                  <label>
-                    Numer telefonu <input type="text" id="phone" name="phone" th:value="*{phone}" />
-                  </label>
-                </div>
-              </div>
-
-              <div class="form-section--column">
-                <h4>Termin odbioru</h4>
-                <div class="form-group form-group--inline">
-                  <label> Data <input type="date" id="pickUpDate" name="pickUpDate" th:value="*{pickUpDate}"/> </label>
-                </div>
-
-                <div class="form-group form-group--inline">
-                  <label> Godzina <input type="time" id="pickUpTime" name="pickUpTime" th:value="*{pickUpTime}" /> </label>
-                </div>
-
-                <div class="form-group form-group--inline">
-                  <label>
-                    Uwagi dla kuriera
-                    <textarea id="pickUpComment" name="pickUpComment" rows="5" th:value="*{pickUpComment}"></textarea>
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-          <!-- STEP 6 -->
-          <div data-step="5">
-            <h3>Podsumowanie Twojej darowizny</h3>
-
-            <div class="summary">
-              <div class="form-section">
-                <h4>Oddajesz:</h4>
-                <ul>
-                  <li>
-                    <span class="icon icon-bag"></span>
-                    <span class="summary--text" ></span
-                    >
-                  </li>
-
-                  <li>
-                    <span class="icon icon-hand"></span>
-                    <span class="summary--text"> </span
-                    >
-                  </li>
-                </ul>
-              </div>
-
-              <div class="form-section form-section--columns">
-                <div class="form-section--column">
-                  <h4>Adres odbioru:</h4>
-                  <ul id="address">
-                    <li>Prosta 51</li>
-                    <li>Warszawa</li>
-                    <li>99-098</li>
-                    <li>123 456 789</li>
-                  </ul>
-                </div>
-
-                <div class="form-section--column">
-                  <h4>Termin odbioru:</h4>
-                  <ul id="date">
-                    <li>13/12/2018</li>
-                    <li>15:40</li>
-                    <li>Brak uwag</li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="submit" class="btn">Potwierdzam</button>
+            <!-- STEP 6 -->
+            <div data-step="5">
+                <h3>Podsumowanie Twojej darowizny</h3>
+
+                <div class="summary">
+                    <div class="form-section">
+                        <h4>Oddajesz:</h4>
+                        <ul>
+                            <li>
+                                <span class="icon icon-bag"></span>
+                                <span class="summary--text"></span
+                                >
+                            </li>
+
+                            <li>
+                                <span class="icon icon-hand"></span>
+                                <span class="summary--text"> </span
+                                >
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="form-section form-section--columns">
+                        <div class="form-section--column">
+                            <h4>Adres odbioru:</h4>
+                            <ul id="address">
+                                <li>Prosta 51</li>
+                                <li>Warszawa</li>
+                                <li>99-098</li>
+                                <li>123 456 789</li>
+                            </ul>
+                        </div>
+
+                        <div class="form-section--column">
+                            <h4>Termin odbioru:</h4>
+                            <ul id="date">
+                                <li>13/12/2018</li>
+                                <li>15:40</li>
+                                <li>Brak uwag</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group form-group--buttons">
+                    <button type="button" class="btn prev-step">Wstecz</button>
+                    <button type="submit" class="btn">Potwierdzam</button>
+                </div>
             </div>
-          </div>
         </form>
-      </div>
-    </section>
+    </div>
+</section>
 
 <footer th:replace="fragments :: footer"></footer>
 
