--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,80 +2,105 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="head">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>Charity</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
 
-<div th:fragment="headerStart">
-    <header class="header--main-page">
-        <nav class="container container--70">
-            <ul class="nav--actions">
-                <li><a href="" class="btn btn--small btn--without-border">Zaloguj</a></li>
-                <li><a href="#" class="btn btn--small btn--highlighted">Załóż konto</a></li>
-            </ul>
 
-            <ul>
-                <li><a href="" class="btn btn--without-border active">Start</a></li>
-                <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-                <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-                <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-                <li><a href="form.html" class="btn btn--without-border">Przekaż dary</a></li>
-                <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
-            </ul>
-        </nav>
+<nav th:fragment="beforeLogin">
+    <nav class="container container--70">
+        <ul class="nav--actions">
+            <li><a th:href="@{/login}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+            <li><a th:href="@{/register}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+        </ul>
 
-            <div class="slogan container container--90">
-                <div class="slogan--item">
-                    <h1>
-                        Zacznij pomagać!<br />
-                        Oddaj niechciane rzeczy w zaufane ręce
-                    </h1>
-                </div>
-            </div>
+        <ul>
+            <li><a th:href="@{/}" class="btn btn--without-border active">Start</a></li>
+            <li><a th:href="@{/#steps}" class="btn btn--without-border">O co chodzi?</a></li>
+            <li><a th:href="@{/#about-us}" class="btn btn--without-border">O nas</a></li>
+            <li><a th:href="@{/#help}" class="btn btn--without-border">Fundacje i organizacje</a></li>
+            <li><a th:href="@{/donation}" class="btn btn--without-border">Przekaż dary</a></li>
+            <li><a th:href="@{/#contact}" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+    </nav>
+</nav>
 
-    </header>
+
+<nav th:fragment="afterLogin">
+    <nav class="container container--70">
+        <ul class="nav--actions">
+            <li class="logged-user">
+                [[${message}]]
+                <ul class="dropdown">
+                    <li><a href="#">Profil</a></li>
+                    <li><a href="#">Moje zbiórki</a></li>
+                    <li><a th:href="@{/logout}">Wyloguj</a></li>
+                </ul>
+            </li>
+        </ul>
+
+        <ul>
+            <li><a th:href="@{/}" class="btn btn--without-border active">Start</a></li>
+            <li><a th:href="@{/#steps}" class="btn btn--without-border">O co chodzi?</a></li>
+            <li><a th:href="@{/#about-us}" class="btn btn--without-border">O nas</a></li>
+            <li><a th:href="@{/#help}" class="btn btn--without-border">Fundacje i organizacje</a></li>
+            <li><a th:href="@{/donation}" class="btn btn--without-border">Przekaż dary</a></li>
+            <li><a th:href="@{/#contact}" class="btn btn--without-border">Kontakt</a></li>
+        </ul>
+    </nav>
+</nav>
+
+
+<div th:fragment="sloganStart">
+    <div class="slogan container container--90" th:fragment="sloganStart">
+        <div class="slogan--item">
+            <h1>
+                Zacznij pomagać!<br/>
+                Oddaj niechciane rzeczy w zaufane ręce
+            </h1>
+        </div>
+    </div>
 </div>
 
-<div th:fragment="headerDonation">
-    <header class="header--main-page">
-        <nav class="container container--70">
-            <ul class="nav--actions">
-                <li class="logged-user">
-                    Witaj Agata
-                    <ul class="dropdown">
-                        <li><a href="#">Profil</a></li>
-                        <li><a href="#">Moje zbiórki</a></li>
-                        <li><a href="#">Wyloguj</a></li>
-                    </ul>
+<div th:fragment="sloganDonationConfirm">
+    <div class="slogan container container--90">
+        <h2>
+            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
+            informacje o odbiorze.
+        </h2>
+    </div>
+</div>
+
+<div class="slogan container container--90" th:fragment="sloganForm">
+    <div class="slogan--item">
+        <h1>
+            Oddaj rzeczy, których już nie chcesz<br/>
+            <span class="uppercase">potrzebującym</span>
+        </h1>
+
+        <div class="slogan--steps">
+            <div class="slogan--steps-title">Wystarczą 4 proste kroki:</div>
+            <ul class="slogan--steps-boxes">
+                <li>
+                    <div><em>1</em><span>Wybierz rzeczy</span></div>
+                </li>
+                <li>
+                    <div><em>2</em><span>Spakuj je w worki</span></div>
+                </li>
+                <li>
+                    <div><em>3</em><span>Wybierz fundację</span></div>
+                </li>
+                <li>
+                    <div><em>4</em><span>Zamów kuriera</span></div>
                 </li>
             </ul>
-
-            <ul>
-                <li><a href="" class="btn btn--without-border active">Start</a></li>
-                <li><a href="#steps" class="btn btn--without-border">O co chodzi?</a></li>
-                <li><a href="#about-us" class="btn btn--without-border">O nas</a></li>
-                <li><a href="#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-                <li><a href="form.html" class="btn btn--without-border">Przekaż dary</a></li>
-                <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
-            </ul>
-        </nav>
-
-        <div th:fragment="sloganFormDonation">
-            <div class="slogan container container--90">
-                <h2>
-                    Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
-                    informacje o odbiorze.
-                </h2>
-            </div>
         </div>
-
-    </header>
+    </div>
 </div>
-
 
 <div th:fragment="footer">
     <footer>
@@ -83,8 +108,8 @@
             <h2>Skontaktuj się z nami</h2>
             <h3>Formularz kontaktowy</h3>
             <form class="form--contact">
-                <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-                <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
+                <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię"/></div>
+                <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko"/></div>
 
                 <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
 
@@ -94,7 +119,9 @@
         <div class="bottom-line">
             <span class="bottom-line--copy">Copyright &copy; 2018</span>
             <div class="bottom-line--icons">
-                <a href="#" class="btn btn--small"><img src="images/icon-facebook.svg"/></a> <a href="#" class="btn btn--small"><img src="images/icon-instagram.svg"/></a>
+                <a href="#" class="btn btn--small"><img src="images/icon-facebook.svg"/></a> <a href="#"
+                                                                                                class="btn btn--small"><img
+                    src="images/icon-instagram.svg"/></a>
             </div>
         </div>
     </footer>
