--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,93 +4,99 @@
 <head th:replace="fragments :: head"></head>
 
 
-  <body>
+<body>
 
-  <header th:replace="fragments :: headerStart"></header>
+<header class="header--main-page">
+    <nav th:insert="fragments :: beforeLogin"></nav>
+    <div th:insert="fragments :: sloganStart"></div>
+</header>
 
-    <section id="stats" class="stats">
-      <div class="container container--85">
+<section id="stats" class="stats">
+    <div class="container container--85">
         <div class="stats--item">
-          <em th:text="${bags}"></em>
-          <h3>Oddanych worków</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
+            <em th:text="${bags}"></em>
+            <h3>Oddanych worków</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum
+                tempora!</p>
         </div>
 
         <div class="stats--item">
-          <em th:text="${donation}"></em>
-          <h3>Przekazanych darów</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
+            <em th:text="${donation}"></em>
+            <h3>Przekazanych darów</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas
+                quam.</p>
         </div>
 
-      </div>
-    </section>
+    </div>
+</section>
 
-    <section id="steps" class="steps">
-      <h2>Wystarczą 4 proste kroki</h2>
+<section id="steps" class="steps">
+    <h2>Wystarczą 4 proste kroki</h2>
 
-      <div class="steps--container">
+    <div class="steps--container">
         <div class="steps--item">
-          <span class="icon icon--hands"></span>
-          <h3>Wybierz rzeczy</h3>
-          <p>ubrania, zabawki, sprzęt i inne</p>
-        </div>
-        <div class="steps--item">
-          <span class="icon icon--arrow"></span>
-          <h3>Spakuj je</h3>
-          <p>skorzystaj z worków na śmieci</p>
+            <span class="icon icon--hands"></span>
+            <h3>Wybierz rzeczy</h3>
+            <p>ubrania, zabawki, sprzęt i inne</p>
         </div>
         <div class="steps--item">
-          <span class="icon icon--glasses"></span>
-          <h3>Zdecyduj komu chcesz pomóc</h3>
-          <p>wybierz zaufane miejsce</p>
+            <span class="icon icon--arrow"></span>
+            <h3>Spakuj je</h3>
+            <p>skorzystaj z worków na śmieci</p>
         </div>
         <div class="steps--item">
-          <span class="icon icon--courier"></span>
-          <h3>Zamów kuriera</h3>
-          <p>kurier przyjedzie w dogodnym terminie</p>
+            <span class="icon icon--glasses"></span>
+            <h3>Zdecyduj komu chcesz pomóc</h3>
+            <p>wybierz zaufane miejsce</p>
         </div>
-      </div>
+        <div class="steps--item">
+            <span class="icon icon--courier"></span>
+            <h3>Zamów kuriera</h3>
+            <p>kurier przyjedzie w dogodnym terminie</p>
+        </div>
+    </div>
 
-      <a href="#" class="btn btn--large">Załóż konto</a>
-    </section>
+    <a href="#" class="btn btn--large">Załóż konto</a>
+</section>
 
-    <section id="about-us" class="about-us">
-      <div class="about-us--text">
+<section id="about-us" class="about-us">
+    <div class="about-us--text">
         <h2>O nas</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero optio esse quisquam illo omnis.</p>
-        <img src="images/signature.svg" class="about-us--text-signature" alt="Signature" />
-      </div>
-      <div class="about-us--image"><img src="images/about-us.jpg" alt="People in circle" /></div>
-    </section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas vitae animi rem pariatur incidunt libero
+            optio esse quisquam illo omnis.</p>
+        <img src="images/signature.svg" class="about-us--text-signature" alt="Signature"/>
+    </div>
+    <div class="about-us--image"><img src="images/about-us.jpg" alt="People in circle"/></div>
+</section>
 
-    <section id="help" class="help">
-      <h2>Komu pomagamy?</h2>
+<section id="help" class="help">
+    <h2>Komu pomagamy?</h2>
 
-      <!-- SLIDE 1 -->
-      <div class="help--slides active" data-id="1">
+    <!-- SLIDE 1 -->
+    <div class="help--slides active" data-id="1">
         <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy.
-          Możesz sprawdzić czym się zajmują.</p>
+            Możesz sprawdzić czym się zajmują.</p>
 
         <ul class="help--slides-items" th:each="index, stat: ${#numbers.sequence(0, institutions.size()-2, 2)}">
-          <li>
-            <div class="col">
-              <div class="title" th:text="${institutions.get(index).name}"></div>
-              <div class="subtitle" th:text="${institutions.get(index).description}"></div>
-            </div>
+            <li>
+                <div class="col">
+                    <div class="title" th:text="${institutions.get(index).name}"></div>
+                    <div class="subtitle" th:text="${institutions.get(index).description}"></div>
+                </div>
 
-            <div class="col">
-              <div class="title" th:text="${institutions.get(index+1).name}"></div>
-              <div class="subtitle" th:text="${institutions.get(index+1).description}"></div>
-            </div>
+                <div class="col">
+                    <div class="title" th:text="${institutions.get(index+1).name}"></div>
+                    <div class="subtitle" th:text="${institutions.get(index+1).description}"></div>
+                </div>
 
-          </li>
+            </li>
         </ul>
-      </div>
+    </div>
 
-    </section>
+</section>
 
 <footer th:replace="fragments :: footer"></footer>
 
 <script th:replace="fragments :: script"></script>
-  </body>
+</body>
 </html>
