--- a/src/main/resources/templates/institutionCRUD-Update.html
+++ b/src/main/resources/templates/institutionCRUD-Update.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-  <head th:insert="fragments :: head"> </head>
-  <body>
 
-     <header th:insert="fragments :: headerDonation"></header>
+<head th:insert="fragments :: head"></head>
+<body>
 
-     <section class="login-page">
-       <h2>Aktualizuj Dane Organizacji</h2>
-       <form th:object="${institutionUpdate}" th:action="@{/updateinstitution}" th:method="post">
-         <input type="hidden" th:value="*{id}" id="id" name="id"/>
-         <div class="form-group">
-           <input type="text"  name="name" placeholder="Nazwa" th:field="*{name}" />
-         </div>
-         <div class="form-group">
-           <textarea type="text" name="description" placeholder="Profil Działalności" th:field="*{description}"></textarea>
-         </div>
+<header class="header--main-page">
+    <nav th:insert="fragments :: afterLogin"></nav>
+    <div th:insert="fragments :: sloganStart"></div>
+</header>
 
-
-         <div class="form-group form-group--buttons">
-           <button class="btn" type="submit">AKtualizuj</button>
-         </div>
-       </form>
-     </section>
-
-    <footer th:insert="fragments :: footer"></footer>
-    <script th:insert="fragments :: script"></script>
+<section class="login-page">
+    <h2>Aktualizuj Dane Organizacji</h2>
+    <form th:object="${institutionUpdate}" th:action="@{/updateinstitution}" th:method="post">
+        <input type="hidden" th:value="*{id}" id="id" name="id"/>
+        <div class="form-group">
+            <input type="text" name="name" placeholder="Nazwa" th:field="*{name}"/>
+        </div>
+        <div class="form-group">
+            <textarea type="text" name="description" placeholder="Profil Działalności"
+                      th:field="*{description}"></textarea>
+        </div>
 
 
-  </body>
+        <div class="form-group form-group--buttons">
+            <button class="btn" type="submit">Aktualizuj</button>
+        </div>
+    </form>
+</section>
+
+<footer th:insert="fragments :: footer"></footer>
+<script th:insert="fragments :: script"></script>
+
+
+</body>
 </html>
